# easy-data

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md
backend/: Makefile  README.md  pyproject.toml  run.py
backend/app/: main.py
backend/app/agent/: __init__.py  admin_agent.py  admin_agent_prompts.py  agent_executor.py  agent_utils.py  base_agent.py  data_model_agent.py  data_model_agent_prompts.py  data_model_analysis_agent.py  data_model_analysis_agent_prompts.py  data_source_agent.py  data_source_agent_prompts.py  models.py  system_health_agent.py  system_health_agent_prompts.py  text_to_sql_agent.py  text_to_sql_agent_prompts.py
backend/app/api/: __init__.py  agents.py  auth.py  chat.py  data_models.py  data_sources.py  jobs.py  llm.py  system.py  tools.py  users.py  workspaces.py
backend/app/connector/: __init__.py  base.py  clickhouse_connector.py  doris_connector.py  factory.py  models.py  mysql_connector.py  oracle_connector.py  postgresql_connector.py  sqlite_connector.py  sqlserver_connector.py
backend/app/core/: biz_error.py  config.py  exception_handler.py  json_utils.py  logging.py  models.py  security.py
backend/app/dao/: database.py  init_db.py  models.py
backend/app/dao/data/: __init__.py  tb_agent.py  tb_llm.py  tb_tool.py
backend/app/dao/data/agents/: __init__.py  agent_1.py  agent_2.py  agent_3.py  agent_4.py  agent_5.py
backend/app/dao/data/tools/: __init__.py  tool_01_demo_tool.py  tool_02_tool_list_data_source.py  tool_03_tool_create_data_source.py  tool_04_tool_get_data_source.py  tool_05_tool_update_data_source.py  tool_06_tool_delete_data_source.py  tool_07_tool_test_data_source.py  tool_08_tool_execute_sql_data_source.py  tool_09_tool_list_data_models_by_data_source.py  tool_10_tool_delete_data_models_by_data_source.py  tool_11_tool_import_data_models_by_data_source.py  tool_12_tool_get_data_model.py  tool_13_tool_delete_data_model.py  tool_14_tool_update_data_model_semantic_and_summary.py  tool_15_tool_get_data_models_semantic.py  tool_16_tool_execute_sql_data_model.py  tool_17_tool_check_data_sources_basic_info.py  tool_18_tool_check_data_source_connection.py  tool_19_tool_check_data_source_has_models.py  tool_20_tool_check_models_exist_in_database.py  tool_21_tool_check_models_semantic.py  tool_22_tool_check_semantic_freshness.py
backend/app/graph/: __init__.py  condition_node.py  end_node.py  llm_node.py  python_node.py  start_node.py  tool_node.py
backend/app/job/: __init__.py  executor.py  scanner.py
backend/app/service/: auth_service.py  data_model_service.py  data_source_service.py  job_service.py  user_service.py  workspace_service.py
backend/app/services/: __init__.py  agents_service.py  data_models_service.py  data_sources_service.py  llm_service.py  tools_service.py  workspace_relation_service.py
backend/app/tool/: __init__.py  data_model_tool.py  data_source_template.py  data_source_tool.py  system_health_tool.py  tool_utils.py
backend/scripts/: gen_init_data.py
backend/www/: index.html
backend/www/assets/: AdminLayout-BBYoUdmT.css  AdminLayout-Bphtov0a.js  AdminLayout-Buxc-xAC.css  AdminLayout-CfYp-o20.js  AgentEditorView-B-BvIxq3.css  AgentEditorView-D5EKbF-e.js  AgentEditorView-DvEoO6sW.js  AgentView-B2WbLQb4.js  AgentView-CipwCYAg.js  AgentView-CiuN_fyV.css  ChatView-BSAOWUeg.js  ChatView-BwSwXU_h.css  ChatView-VDYwKf8z.js  DataModelView-CQvHIjpL.css  DataModelView-ChSTM5T7.js  DataModelView-DTtUYem-.css  DataModelView-DZ3pYGGr.js  DataQueryView-B1d6sQPn.css  DataQueryView-BxroKfaG.js  DataQueryView-DDLoSCmy.js  DataSourceView-CAQwF56Z.css  DataSourceView-DLldapMu.js  DataSourceView-TT6005XM.js  JobListView-CD67DBs8.css  JobListView-CUFy8loN.js  LlmView-CnwX0sQn.js  LlmView-kdNaXmOQ.js  LlmView-lyP6QL8o.css  LoginView-CgvwJfUD.js  LoginView-DAWIBony.css  LoginView-tjwEOSXq.js  SettingOutlined-DiBZcZnb.js  SettingOutlined-DxpECibu.js  SystemInitView-BlI6rxPY.css  SystemInitView-CcnsC09h.js  SystemInitView-DqnIRfNB.js  TableOutlined-CXw_rZEG.js  TableOutlined-ChSlNtp1.js  ToolView-B8LdHhll.css  ToolView-ChJRqOA1.js  (+21 more)
doc/: Design.md  SystemDesign.md  admin-agent-guide.md  database_comparison.md  easy-data-promotion.md  project-ai-coding-guidelines.md  wechat-article-001.md  wechat-article-002.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: agent.ts  chat.ts  dataModel.ts  dataSource.ts  job.ts  llm.ts  system.ts  tool.ts  user.ts  workspace.ts
frontend/src/assets/: base.css  main.css
frontend/src/layouts/: AdminLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/utils/: markdown.ts  request.ts
frontend/src/views/admin/agent/: AgentEditorView.vue  AgentView.vue
frontend/src/views/admin/dataModel/: DataModelView.vue
frontend/src/views/admin/dataQuery/: DataQueryView.vue
frontend/src/views/admin/dataSource/: DataSourceView.vue
frontend/src/views/auth/: LoginView.vue
frontend/src/views/chat/: ChatView.vue
frontend/src/views/system/: SystemInitView.vue
(+5 files in other folders)
