[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-data-backend"
version = "1.0.0"
description = "Easy Data Backend - 致力于做真正的智能平台"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Easy Data Team"}
]
keywords = ["fastapi", "ai", "data-analysis", "langchain", "langgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    # FastAPI核心依赖
    "fastapi==0.125.0",
    "uvicorn[standard]==0.38.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.6.1",
    # 数据库相关
    "sqlalchemy==2.0.45",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "pymysql==1.1.1",
    "pyodbc==5.1.0",
    "clickhouse-connect==0.10.0",
    # 认证相关
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.12",
    # AI Agent相关
    "langchain==1.2.0",
    "langchain-openai==1.1.5",
    "langchain-core==1.2.2",
    "langgraph==1.0.5",
    "langsmith==0.5.0",
    # 向量数据库
    "pymilvus==2.4.0",
    # 工具类
    "python-dotenv==1.0.1",
    "redis==5.2.0",
    "httpx==0.28.1",
    "websockets==14.1",
    # 其他
    "jinja2==3.1.4",
    "python-dateutil==2.9.0",
]

[project.optional-dependencies]
oracle = ["cx-oracle==8.3.0"]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
easy-data = "app.main:app"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json", "*.yaml", "*.yml"]

# Black 配置
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
  | migrations
)/
'''

# isort 配置
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
]
known_first_party = ["app"]

# Ruff 配置
[tool.ruff]
# 目标 Python 版本
target-version = "py312"
line-length = 100

# 排除的目录和文件
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint]
# 启用的规则集合
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "PL",  # Pylint
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
]

# 忽略的规则
ignore = [
    "E501",  # line too long (handled by black)
    "RUF001", # 禁止检查中文标点符号（字符串中的）
    "RUF002", # 禁止检查中文标点符号（docstring中的）
    "RUF003", # 禁止检查中文字符（代码注释中的）
    "UP007",  # 禁用将 Union[T, U] 自动升级为 T | U，保持使用 Union 语法
    "UP045",  # 禁用将 Optional[T] 自动升级为 T | None，保持使用 Optional[T] 语法
    "B008",  # do not perform function calls in argument defaults
    "ARG001",
    "ARG002",
    "TRY300",
]

[tool.ruff.lint.pyupgrade]
# 保持运行时类型注解，避免将 Optional[T] 自动转换为 T | None
# 这对于使用 Pydantic 等依赖运行时类型注解的库很重要
keep-runtime-typing = true

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 12
max-returns = 10
max-statements = 80

[tool.ruff.format]
# 使用 Black 兼容的格式化
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy 配置（可选）
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_openai.*",
    "langchain_core.*",
    "langgraph.*",
    "langsmith.*",
    "pymilvus.*",
    "cx_Oracle.*",
    "clickhouse_connect.*",
]
ignore_missing_imports = true

